// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render listbox with the first option selected (snapshot) 1`] = `
<div
  aria-activedescendant="LISTBOX__OPTION__0-1"
  aria-labelledby="lb-title"
  role="listbox"
  tabindex="0"
>
  <div
    style="padding: 0px; margin: 0px;"
  >
    <div
      data-index="0"
      id="LISTBOX__OPTION__0-0"
      role="option"
      style="list-style: none;"
    >
      <div
        style="color: black;"
      >
        Apple
      </div>
    </div>
    <div
      aria-selected="true"
      data-index="1"
      id="LISTBOX__OPTION__0-1"
      role="option"
      style="list-style: none; background: rgb(189, 228, 255);"
    >
      <div
        style="color: black;"
      >
        Bananna
      </div>
    </div>
    <div
      data-index="2"
      id="LISTBOX__OPTION__0-2"
      role="option"
      style="list-style: none;"
    >
      <div
        style="color: black;"
      >
        Carrot
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the listbox when user adds native elements as children of listbox (snapshot) 1`] = `
<div>
  <div
    aria-activedescendant="LISTBOX__OPTION__0-0"
    role="listbox"
    tabindex="0"
  >
    <div
      style="padding: 0px; margin: 0px;"
    >
      <div
        aria-selected="true"
        data-index="0"
        id="LISTBOX__OPTION__0-0"
        role="option"
        style="list-style: none; background: rgb(189, 228, 255);"
      >
        Apple
      </div>
      <div
        data-index="1"
        id="LISTBOX__OPTION__0-1"
        role="option"
        style="list-style: none;"
      >
        Bananna
      </div>
      <div
        data-index="2"
        id="LISTBOX__OPTION__0-2"
        role="option"
        style="list-style: none;"
      >
        Carrot
      </div>
    </div>
  </div>
</div>
`;
